--- a/r4ds-basic/hongdae/sep-2017/README.Rmd
+++ b/r4ds-basic/hongdae/sep-2017/README.Rmd
@@ -20,7 +20,7 @@ https://github.com/mrchypark/study-gruop
 - 4주차: 4장 - 
 - 5주차: 5장 - 
 - 6주차: 6장 - 
-- 7주차: 7장 - 
+- 7주차: 7장 - Yang, Dae Jin
 - 8주차: 8장 - 
 - 9주차: 9장 - 
 - 10주차: 10장 - 
